--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "hatchling.build"
 
 [project]
 name = "struct-frame"
-version = "0.0.23"
+version = "0.0.25"
 authors = [
   { name="Rijesh Augustine", email="rijesh@mylonics.com" },
 ]
 dependencies = [
-    "structured-classes=3.1.0",
+    "structured-classes>=3.1.0",
     "proto-schema-parser>=1.4.5",
 ]
 description = "A framework for serializing data with headers"
