--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,38 @@
-ts_out
-node_modules
-.vscode
+# Build outputs and temporary files
+ts_out/
+node_modules/
+.vscode/
 main.exe
-dist
-generated/
+dist/
 __pycache__/
+
+# Generated code directories
+generated/
 gen/
-# Generated output directories in root (legacy)
+tests/generated/
+
+# Legacy generated output directories (cleanup)
 c/
 py/
 ts/
+
+# Test artifacts
+tests/c/*.exe
+tests/c/*.bin
+tests/py/*.bin
+tests/ts/*.bin
+*_test_data.bin
+
+# Debug and temporary files
+debug*.c
+debug*.exe
+error.txt
+*.log
+InstallationLog.txt
+
+# IDE and OS files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
