--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "struct-frame"
-version = "0.0.29"
+version = "0.0.42"
 authors = [
   { name="Rijesh Augustine", email="rijesh@mylonics.com" },
 ]
@@ -27,9 +27,9 @@ Homepage = "https://github.com/mylonics/struct-frame"
 Issues = "https://github.com/mylonics/struct-frame/issues"
 
 
-[tool.hatch.build.targets.wheel]
-only-include = ["src/struct_frame"]
 
-[tool.hatch.build.targets.wheel.sources]
-"src" = ""
-"boilerplate" = "src/struct_frame/boilerplate"
+[tool.hatch.build.targets.sdist.force-include]
+"src/struct_frame/boilerplate" = "src/struct_frame/boilerplate"
+
+[tool.hatch.build.targets.wheel.force-include]
+"src/struct_frame/boilerplate" = "struct_frame/boilerplate"
