--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "struct-frame"
-version = "0.0.43"
+version = "0.0.46"
 authors = [
   { name="Rijesh Augustine", email="rijesh@mylonics.com" },
 ]
@@ -30,5 +30,5 @@ Issues = "https://github.com/mylonics/struct-frame/issues"
 [tool.hatch.build.targets.sdist.force-include]
 "src/struct_frame/boilerplate" = "src/struct_frame/boilerplate"
 
-[tool.hatch.build.targets.wheel.force-include]
-"src/struct_frame/boilerplate" = "struct_frame/boilerplate"
+#[tool.hatch.build.targets.wheel.force-include]
+#"src/struct_frame/boilerplate" = "struct_frame/boilerplate"
