--- a/tests/csharp/StructFrameTests.csproj
+++ b/tests/csharp/StructFrameTests.csproj
@@ -5,5 +5,15 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <StartupObject>StructFrameTests.TestRunner</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Test files -->
+    <Compile Include="TestRunner.cs" />
+    <Compile Include="TestCodec.cs" />
+    
+    <!-- Generated struct files -->
+    <Compile Include="..\generated\csharp\*.cs" Link="Generated\%(Filename)%(Extension)" />
+  </ItemGroup>
 </Project>
