--- a/tests/csharp/StructFrameTests.csproj
+++ b/tests/csharp/StructFrameTests.csproj
@@ -22,8 +22,8 @@
     <Compile Include="test_extended.cs" />
     <Compile Include="test_variable_flag.cs" />
     
-    <!-- Generated struct files -->
-    <Compile Include="..\generated\csharp\*.cs" Link="Generated\%(Filename)%(Extension)" />
+    <!-- Generated struct files (exclude SDK and .sdk.cs files - SDK is generated but not used in tests) -->
+    <Compile Include="..\generated\csharp\*.cs" Exclude="..\generated\csharp\*.sdk.cs" Link="Generated\%(Filename)%(Extension)" />
     <Compile Include="..\generated\csharp\FrameHeaders\*.cs" Link="Generated\FrameHeaders\%(Filename)%(Extension)" />
     <Compile Include="..\generated\csharp\PayloadTypes\*.cs" Link="Generated\PayloadTypes\%(Filename)%(Extension)" />
   </ItemGroup>
